--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "fakerator": "^0.3.0",
     "jsonwebtoken": "^8.2.0",
     "pg": "6",
     "sequelize": "^4.35.2",
